int - adjust title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="imgBx">
                     <img src="sylvain-lissy.jpg" alt="Moi">
                 </div>
-                <h2>Sylvain LISSY<br><span>Chef de projet<br>Intégrateur Applicatif</span></h2>
+                <h2>Sylvain LISSY<br><span>Developpeur Web<br>Intégrateur Applicatif</span></h2>
             </div>
 
             <div class="contactInfo">
