cdp - rearrange skills

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="about">
                 <!-- <h2 class="title2">Profile</h2> -->
                 <h1>Sylvain <span>LISSY</span></h1>
-                <h2>Developpeur Web / Intégrateur Applicatif</h2>
+                <h2>Chef de projet / Intégrateur Applicatif</h2>
                 <p>Toujours en quête d'amélioration de mes compétences et connaissances, je me forme, j'apprends…</p>
                 <p>En tant qu'autodidacte et très autonome, j'aime travailler en équipe, affronter les défis et découvrir de nouvelles choses.</p>
                 </p>
@@ -387,16 +387,17 @@
                         <h3>IZENCIA</h3>
                         <h4>Ingénieur de production - Team Leader</h4>
                         <p>
-                            Création d'indicateurs de performance<br>
+                            Création d'indicateurs de performance (KPI)<br>
                             Collaboration avec les équipes Nationale<br>
-                            Déplacements ponctuel au siège<br>
+                            Calcul d'abaques et gestion de charge<br>
                             Animation de réunions de pilotage contractuel<br>
+                            Collecte et présentation de données (Indicateurs / SLA)<br>
+                            Coordination des tâches de mise en production<br>
+                            Gestion d'entrée d'un nouveau collaborateur dans l'équipe<br>
                             <!----------------------------------------------------------->
                             Intégration d'application (conformité, test, installation)<br>
-                            Collecte et présentation de données (Indicateurs)<br>
-                            Gestion d'entrée d'un nouveau collaborateur dans l'équipe<br>
                             Capitalisation de la connaissance<br>
-                            Coordination des tâches de mise en production<br>
+                            <!----------------------------------------------------------->
                             Support applicatif et fonctionnel de niveau 2<br>
                             Support poste de travail et mobilité de niveau 2.
                         </p>
@@ -495,6 +496,114 @@
                 <h2 class="title2">Compétences</h2>
                 <div class="skillbox">
                     <div class="box">
+                        <h4>agile / scrum</h4>
+                        <div class="percent">
+                            <div style="width: 50%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>itil</h4>
+                        <div class="percent">
+                            <div style="width: 50%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>ci/cd</h4>
+                        <div class="percent">
+                            <div style="width: 50%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>gitlab ci</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>cloud / aws</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>github</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>réseaux</h4>
+                        <div class="percent">
+                            <div style="width: 80%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>kubernetes</h4>
+                        <div class="percent">
+                            <div style="width: 45%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>ansible</h4>
+                        <div class="percent">
+                            <div style="width: 35%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>docker</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>jenkins</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>linux</h4>
+                        <div class="percent">
+                            <div style="width: 75%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>apache-tomcat</h4>
+                        <div class="percent">
+                            <div style="width: 50%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>puppet</h4>
+                        <div class="percent">
+                            <div style="width: 35%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>Algorithmique</h4>
+                        <div class="percent">
+                            <div style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>python</h4>
+                        <div class="percent">
+                            <div style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>mysql</h4>
+                        <div class="percent">
+                            <div style="width: 75%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h4>mongodb</h4>
+                        <div class="percent">
+                            <div style="width: 50%;"></div>
+                        </div>
+                    </div>
+                    <div class="box">
                         <h4>html5</h4>
                         <div class="percent">
                             <div style="width: 90%;"></div>
@@ -525,21 +634,15 @@
                         </div>
                     </div>
                     <div class="box">
-                        <h4>React</h4>
+                        <h4>react</h4>
                         <div class="percent">
                             <div style="width: 50%;"></div>
                         </div>
                     </div>
                     <div class="box">
-                        <h4>PHP</h4>
+                        <h4>php</h4>
                         <div class="percent">
                             <div style="width: 55%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>github</h4>
-                        <div class="percent">
-                            <div style="width: 65%;"></div>
                         </div>
                     </div>
                     <div class="box">
@@ -549,117 +652,15 @@
                         </div>
                     </div>
                     <div class="box">
-                        <h4>mongodb</h4>
-                        <div class="percent">
-                            <div style="width: 50%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
                         <h4>vue.js</h4>
                         <div class="percent">
                             <div style="width: 55%;"></div>
                         </div>
                     </div>
                     <div class="box">
-                        <h4>mysql</h4>
-                        <div class="percent">
-                            <div style="width: 75%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>réseaux</h4>
-                        <div class="percent">
-                            <div style="width: 80%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>linux</h4>
-                        <div class="percent">
-                            <div style="width: 75%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>Algorithmique</h4>
-                        <div class="percent">
-                            <div style="width: 70%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>python</h4>
-                        <div class="percent">
-                            <div style="width: 65%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
                         <h4>flask</h4>
                         <div class="percent">
                             <div style="width: 60%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>agile/scrum</h4>
-                        <div class="percent">
-                            <div style="width: 50%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>itil</h4>
-                        <div class="percent">
-                            <div style="width: 50%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>docker</h4>
-                        <div class="percent">
-                            <div style="width: 65%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>ci/cd</h4>
-                        <div class="percent">
-                            <div style="width: 55%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>jenkins</h4>
-                        <div class="percent">
-                            <div style="width: 65%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>ansible</h4>
-                        <div class="percent">
-                            <div style="width: 35%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>kubernetes</h4>
-                        <div class="percent">
-                            <div style="width: 45%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>apache-tomcat</h4>
-                        <div class="percent">
-                            <div style="width: 50%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>gitlab ci</h4>
-                        <div class="percent">
-                            <div style="width: 65%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>puppet</h4>
-                        <div class="percent">
-                            <div style="width: 35%;"></div>
-                        </div>
-                    </div>
-                    <div class="box">
-                        <h4>cloud et AWS</h4>
-                        <div class="percent">
-                            <div style="width: 65%;"></div>
                         </div>
                     </div>
                 </div>
